recursion.logo.sierpinski.Sierpinski.scala.error
Compilation error:
Sierpinski:1: error: reassignment to val
  level=level+1
       ^