recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  level=level+1
  if (level!=0){
    sierpinski(level-1,length/2)
    right(120)
    sierpinski(level-1,length/2)
    right(120)
    sierpinski(level-1,length/2)
    right(120)
  }else{
    forward(length)
}
}